--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     ports:
     - 8000:8000
-    depends_on:
+    links:
       - products-db
   products-db:
     image: postgres:13.3-alpine
@@ -17,9 +17,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_DB=products
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - ./data/db:/app/postgres/data
   pgadmin:
