--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,7 @@ services:
     environment:
       - PGADMIN_DEFAULT_EMAIL=user@domain.com
       - PGADMIN_DEFAULT_PASSWORD=1q2w3e
+  products-redis:
+    image: redis
+    container_name: products-redis
+    restart: always
