--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - PGADMIN_DEFAULT_EMAIL=user@domain.com
       - PGADMIN_DEFAULT_PASSWORD=1q2w3e
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
     container_name: products-api-elasticsearch
     volumes:
       - ./config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
@@ -52,7 +52,7 @@ services:
     ports:
       - 9200:9200
   logstash:
-    image: docker.elastic.co/logstash/logstash:7.14.0
+    image: docker.elastic.co/logstash/logstash:6.5.1
     container_name: products-api-logstash
     volumes:
       - ./config/logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro
@@ -61,15 +61,16 @@ services:
         condition: service_healthy
   filebeat:
     image: docker.elastic.co/beats/filebeat:7.14.0
+    entrypoint: "filebeat -e -strict.perms=false"
     container_name: products-api-filebeat
     depends_on:
       elasticsearch:
         condition: service_healthy
     volumes:
       - ./config/filebeat.yml:/usr/share/filebeat/filebeat.yml
-      - ./logs/:/logs/
+      - ./applogs/:/logs/
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.14.0
+    image: docker.elastic.co/kibana/kibana:7.6.2
     container_name: products-api-kibana
     depends_on:
       elasticsearch:
