--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB:-products}
       - POSTGRES_USERNAME=${POSTGRES_USER:-postgres}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+      - POSTGRES_PORT=${POSTGRES_PORT:-5432}
   products-db:
     image: postgres:13.3-alpine
     restart: always
