--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,7 +25,7 @@ jobs:
       run:  go mod download
 
     - name: Build
-      run: go build -v ./main.go
+      run: go build -v ./...
 
     - name: Build Docker image
       uses: docker/build-push-action@v2
@@ -34,4 +34,4 @@ jobs:
         tags: ${{ github.event.repository.name }}:latest, ${{ github.repository }}:latest
 
     - name: Run functional tests
-      run:  go test -v
+      run:  go test -v ./...
